[project]
name = "tryrack_api"
version = "0.1.0"
description = "FastAPI application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "authlib>=1.6.5",
    "boto3>=1.35.0",
    "cachetools>=6.0.0",
    "fastapi>=0.121.0",
    "fastapi-debug-toolbar==0.6.3",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "pillow>=12.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.11.0",
    "python-multipart==0.0.20",
    "sqlalchemy>=2.0.44",
    "upstash-redis>=1.0.0",
    "uvicorn[standard]>=0.38.0",
    "workos>=5.0.0",
]

# Development dependencies
[project.optional-dependencies]
dev = [
    "alembic>=1.17.1",
    "isort>=5.13.0",
    "psycopg2-binary>=2.9.11",
]

# isort configuration (compatible with Black)
[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
known_first_party = ["app"]
